--- a/package.json
+++ b/package.json
@@ -12,22 +12,24 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client "
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "cron": "^2.3.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.1",
-    "lodash": "^4.17.21",
-    "mongoose": "^7.3.2",
-    "mongoose-slug-generator": "^1.0.4",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.9.3",
-    "rotating-file-stream": "^3.1.0",
-    "sharp": "^0.32.1",
-    "uuid": "^9.0.0"
+    "bcryptjs": "2.4.3",
+    "cors": "2.8.5",
+    "cron": "2.4.3",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "express-async-errors": "3.1.1",
+    "express-validator": "7.0.1",
+    "jsonwebtoken": "9.0.2",
+    "lodash": "4.17.21",
+    "mongoose": "7.5.2",
+    "mongoose-slug-generator": "1.0.4",
+    "morgan": "1.10.0",
+    "multer": "1.4.5-lts.1",
+    "nodemailer": "6.9.5",
+    "rotating-file-stream": "^3.1.1",
+    "sharp": "0.32.6",
+    "swagger-jsdoc": "6.2.8",
+    "swagger-ui-express": "5.0.0",
+    "uuid": "9.0.1"
   }
 }
