--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "express-validator": "7.0.1",
     "jsonwebtoken": "9.0.2",
     "lodash": "4.17.21",
-    "mongoose": "7.5.2",
+    "mongoose": "^6.10.0",
     "mongoose-slug-generator": "1.0.4",
     "morgan": "1.10.0",
     "multer": "1.4.5-lts.1",
