--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client "
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "cron": "2.4.3",
@@ -22,6 +23,7 @@
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
     "express-validator": "7.0.1",
+    "flutterwave-node-v3": "^1.1.7",
     "jsonwebtoken": "9.0.2",
     "lodash": "4.17.21",
     "mongoose": "^6.10.0",
